--- a/service.yml
+++ b/service.yml
@@ -7,7 +7,8 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 80
-    targetPort: 3000  # Replace with the port your app runs on
+    - port: 80
+      targetPort: 3000
   selector:
     app: bms
+
